Updates to ZLIB build paths

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,6 +119,7 @@ set(SEAL_CONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/SEAL-${SEAL_VERSION_MA
 set(SEAL_INCLUDES_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/SEAL-${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
 set(SEAL_INCLUDES_BUILD_DIR ${SEAL_SOURCE_DIR}/native/src)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${SEAL_SOURCE_DIR}/bin)
+set(SEAL_THIRDPARTY_DIR ${SEAL_SOURCE_DIR}/thirdparty)
 
 # For extra modules we might have
 list(APPEND CMAKE_MODULE_PATH ${SEAL_SOURCE_DIR}/cmake)
@@ -130,10 +131,20 @@ include(CheckCXXSourceCompiles)
 include(CheckCXXSourceRuns)
 include(CheckTypeSize)
 
-# We clean up native/src/gsl directory which is no longer used in version >= 3.5.0
+################################################
+# Cleaning up artifacts from previous versions #
+################################################
+
+# Remove native/src/gsl directory which is no longer used in version >= 3.5.0
 if(NOT MSVC AND EXISTS ${SEAL_INCLUDES_BUILD_DIR}/gsl)
     message(STATUS "Removing ${SEAL_INCLUDES_BUILD_DIR}/gsl; this is no longer used by Microsoft SEAL >= 3.5.0")
     file(REMOVE_RECURSE ${SEAL_INCLUDES_BUILD_DIR}/gsl)
+endif()
+
+# Remove thirdparty/zlib/src/CMakeCache.txt: the location changed in SEAL >= 3.5.4
+if(NOT MSVC AND EXISTS ${SEAL_THIRDPARTY_DIR}/zlib/src/CMakeCache.txt)
+    message(STATUS "Removing old ${SEAL_THIRDPARTY_DIR}/zlib/src/CMakeCache.txt")
+    file(REMOVE ${SEAL_THIRDPARTY_DIR}/zlib/src/CMakeCache.txt)
 endif()
 
 ##################################
@@ -234,8 +245,6 @@ function(seal_create_cache_entries dir_name)
     file(APPEND "${cce_file_name}" "set(CMAKE_SYSTEM_VERSION ${CMAKE_SYSTEM_VERSION} CACHE STRING \"\" FORCE)\n")
 endfunction()
 
-set(THIRDPARTY_DIR ${SEAL_SOURCE_DIR}/thirdparty)
-
 # [option] SEAL_USE_MSGSL
 set(SEAL_USE_MSGSL_OPTION_STR "Use Microsoft GSL")
 option(SEAL_USE_MSGSL ${SEAL_USE_MSGSL_OPTION_STR} ON)
@@ -248,19 +257,19 @@ if(SEAL_USE_MSGSL AND NOT MSVC)
             COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
             OUTPUT_QUIET
             RESULT_VARIABLE result
-            WORKING_DIRECTORY ${THIRDPARTY_DIR}/msgsl)
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/msgsl)
     else()
-        seal_create_cache_entries(${THIRDPARTY_DIR}/msgsl)
-        if(EXISTS ${THIRDPARTY_DIR}/msgsl/CMakeCache.txt)
+        seal_create_cache_entries(${SEAL_THIRDPARTY_DIR}/msgsl)
+        if(EXISTS ${SEAL_THIRDPARTY_DIR}/msgsl/CMakeCache.txt)
             # Force regenerating make files. When cross compiling we might be
             # compiling more than one platform at a time.
-            file(REMOVE ${THIRDPARTY_DIR}/msgsl/CMakeCache.txt)
+            file(REMOVE ${SEAL_THIRDPARTY_DIR}/msgsl/CMakeCache.txt)
         endif()
         execute_process(
             COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" . -Ccache_init.txt
             OUTPUT_QUIET
             RESULT_VARIABLE result
-            WORKING_DIRECTORY ${THIRDPARTY_DIR}/msgsl)
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/msgsl)
     endif()
     if(result)
         message(WARNING "Failed to download MSGSL (${result}); disabling `SEAL_USE_MSGSL`")
@@ -273,7 +282,7 @@ if(SEAL_USE_MSGSL AND NOT MSVC)
         COMMAND ${CMAKE_COMMAND} --build .
         OUTPUT_QUIET
         RESULT_VARIABLE result
-        WORKING_DIRECTORY ${THIRDPARTY_DIR}/msgsl)
+        WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/msgsl)
     if(result)
         message(WARNING "Failed to build MSGSL (${result}); disabling `SEAL_USE_MSGSL`")
     endif()
@@ -286,9 +295,9 @@ endif()
 # Set up the targets
 if(SEAL_USE_MSGSL AND NOT MSVC)
     add_subdirectory(
-        ${THIRDPARTY_DIR}/msgsl/src
+        ${SEAL_THIRDPARTY_DIR}/msgsl/src
         EXCLUDE_FROM_ALL)
-    set(MSGSL_INCLUDE_DIR ${THIRDPARTY_DIR}/msgsl/src/include)
+    set(MSGSL_INCLUDE_DIR ${SEAL_THIRDPARTY_DIR}/msgsl/src/include)
 endif()
 
 # [option] SEAL_USE_ZLIB
@@ -308,19 +317,19 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
             COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
             OUTPUT_QUIET
             RESULT_VARIABLE result
-            WORKING_DIRECTORY ${THIRDPARTY_DIR}/zlib)
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zlib)
     else()
-        seal_create_cache_entries(${THIRDPARTY_DIR}/zlib)
-        if(EXISTS ${THIRDPARTY_DIR}/zlib/CMakeCache.txt)
+        seal_create_cache_entries(${SEAL_THIRDPARTY_DIR}/zlib)
+        if(EXISTS ${SEAL_THIRDPARTY_DIR}/zlib/build/CMakeCache.txt)
             # Force regenerating make files. When cross compiling we might be
             # compiling more than one platform at a time.
-            file(REMOVE ${THIRDPARTY_DIR}/zlib/CMakeCache.txt)
+            file(REMOVE ${SEAL_THIRDPARTY_DIR}/zlib/build/CMakeCache.txt)
         endif()
         execute_process(
             COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" . -Ccache_init.txt
             OUTPUT_QUIET
             RESULT_VARIABLE result
-            WORKING_DIRECTORY ${THIRDPARTY_DIR}/zlib)
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zlib)
     endif()
     if(result)
         message(WARNING "Failed to download ZLIB (${result}); disabling `SEAL_USE_ZLIB`")
@@ -343,7 +352,7 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
     execute_process(COMMAND ${CMAKE_COMMAND} --build .
         OUTPUT_QUIET
         RESULT_VARIABLE result
-        WORKING_DIRECTORY ${THIRDPARTY_DIR}/zlib)
+        WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zlib)
     if(result)
         message(WARNING "Failed to build ZLIB (${result}); disabling `SEAL_USE_ZLIB`")
     endif()
@@ -352,12 +361,13 @@ endif()
 # Set up the targets
 if(SEAL_USE_ZLIB AND NOT MSVC)
     add_subdirectory(
-        ${THIRDPARTY_DIR}/zlib/src
+        ${SEAL_THIRDPARTY_DIR}/zlib/src
         EXCLUDE_FROM_ALL)
-    list(APPEND SEAL_ZLIB_INCLUDE_DIRS ${THIRDPARTY_DIR}/zlib/src)
-    list(APPEND SEAL_ZLIB_INCLUDE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zlib/src)
+    # Set the ZLIB include directory to be relative to this CMakeLists.txt's binary directory
+    # for out-of-source builds.
+    set(SEAL_ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zlib/src)
     set_target_properties(zlibstatic PROPERTIES
-        INTERFACE_INCLUDE_DIRECTORIES "${SEAL_ZLIB_INCLUDE_DIRS}")
+        INTERFACE_INCLUDE_DIRECTORIES ${SEAL_ZLIB_INCLUDE_DIR})
 endif()
 
 # Google Test
@@ -371,7 +381,7 @@ if(SEAL_BUILD_TESTS AND NOT MSVC)
         COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
         OUTPUT_QUIET
         RESULT_VARIABLE result
-        WORKING_DIRECTORY ${THIRDPARTY_DIR}/googletest)
+        WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/googletest)
     if(result)
         message(WARNING "Failed to download Google Test (${result}); disabling `SEAL_BUILD_TESTS`")
     endif()
@@ -386,7 +396,7 @@ if(SEAL_BUILD_TESTS AND NOT MSVC)
     execute_process(COMMAND ${CMAKE_COMMAND} --build .
         OUTPUT_QUIET
         RESULT_VARIABLE result
-        WORKING_DIRECTORY ${THIRDPARTY_DIR}/googletest)
+        WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/googletest)
     if(result)
         message(WARNING "Failed to build Google Test (${result}); disabling `SEAL_BUILD_TESTS`")
     endif()
@@ -396,8 +406,8 @@ endif()
 if(SEAL_BUILD_TESTS AND NOT MSVC)
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     add_subdirectory(
-        ${THIRDPARTY_DIR}/googletest/src
-        ${THIRDPARTY_DIR}/googletest/build
+        ${SEAL_THIRDPARTY_DIR}/googletest/src
+        ${SEAL_THIRDPARTY_DIR}/googletest/build
         EXCLUDE_FROM_ALL)
 endif()
 
