Started switching to zstd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,6 +307,10 @@ endif()
 set(SEAL_USE_ZLIB_OPTION_STR "Use ZLIB for compressed serialization")
 option(SEAL_USE_ZLIB ${SEAL_USE_ZLIB_OPTION_STR} ON)
 
+# [option] SEAL_USE_ZSTD
+set(SEAL_USE_ZSTD_OPTION_STR "Use ZSTD for compressed serialization")
+option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
+
 # ZLIB has no VERSION given to project(), needs to suppress CMP0048 warning
 if(SEAL_USE_ZLIB AND NOT MSVC)
     set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS TRUE CACHE INTERNAL "Suppress CMP0048 warning" FORCE)
@@ -371,6 +375,71 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
     set(SEAL_ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zlib/src)
     set_target_properties(zlibstatic PROPERTIES
         INTERFACE_INCLUDE_DIRECTORIES ${SEAL_ZLIB_INCLUDE_DIR})
+endif()
+
+# [option] SEAL_USE_ZSTD
+set(SEAL_USE_ZSTD_OPTION_STR "Use ZSTD for compressed serialization")
+option(SEAL_USE_ZSTD ${SEAL_USE_ZSTD_OPTION_STR} ON)
+
+# Download and configure
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    message(STATUS "Setting up ZSTD ...")
+    if(NOT CMAKE_TOOLCHAIN_FILE)
+        execute_process(
+            COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+            OUTPUT_QUIET
+            RESULT_VARIABLE result
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zstd)
+    else()
+        seal_create_cache_entries(${SEAL_THIRDPARTY_DIR}/zstd)
+        if(EXISTS ${SEAL_THIRDPARTY_DIR}/zstd/build/CMakeCache.txt)
+            # Force regenerating make files. When cross compiling we might be
+            # compiling more than one platform at a time.
+            file(REMOVE ${SEAL_THIRDPARTY_DIR}/zstd/build/CMakeCache.txt)
+        endif()
+        execute_process(
+            COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" . -Ccache_init.txt
+            OUTPUT_QUIET
+            RESULT_VARIABLE result
+            WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zstd)
+    endif()
+    if(result)
+        message(WARNING "Failed to download ZSTD (${result}); disabling `SEAL_USE_ZSTD`")
+    endif()
+    mark_as_advanced(AMD64)
+    mark_as_advanced(ASM686)
+    mark_as_advanced(EXECUTABLE_OUTPUT_PATH)
+    mark_as_advanced(CMAKE_INSTALL_PREFIX)
+    mark_as_advanced(INSTALL_BIN_DIR)
+    mark_as_advanced(INSTALL_INC_DIR)
+    mark_as_advanced(INSTALL_LIB_DIR)
+    mark_as_advanced(INSTALL_MAN_DIR)
+    mark_as_advanced(INSTALL_PKGCONFIG_DIR)
+    mark_as_advanced(LIBRARY_OUTPUT_PATH)
+    mark_as_advanced(CMAKE_BACKWARDS_COMPATIBILITY)
+endif()
+
+# Build
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    execute_process(COMMAND ${CMAKE_COMMAND} --build .
+        OUTPUT_QUIET
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${SEAL_THIRDPARTY_DIR}/zstd)
+    if(result)
+        message(WARNING "Failed to build ZSTD (${result}); disabling `SEAL_USE_ZSTD`")
+    endif()
+endif()
+
+# Set up the targets
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    add_subdirectory(
+        ${SEAL_THIRDPARTY_DIR}/zstd/src/build/cmake
+        EXCLUDE_FROM_ALL)
+    # Set the ZSTD include directory to be relative to this CMakeLists.txt's binary directory
+    # for out-of-source builds.
+    #set(SEAL_ZSTD_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zstd/src/lib)
+    #set_target_properties(libzstd_static PROPERTIES
+        #INTERFACE_INCLUDE_DIRECTORIES ${SEAL_ZSTD_INCLUDE_DIR})
 endif()
 
 # Google Test
@@ -622,6 +691,10 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
     target_link_libraries(seal_obj PRIVATE zlibstatic)
 endif()
 
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    target_link_libraries(seal_obj PRIVATE libzstd_static)
+endif()
+
 # Always build the static library
 add_library(seal STATIC $<TARGET_OBJECTS:seal_obj>)
 seal_set_version(seal)
@@ -656,12 +729,22 @@ if(BUILD_SHARED_LIBS)
         target_link_libraries(seal_shared PRIVATE zlibstatic)
     endif()
 
+    if(SEAL_USE_ZSTD AND NOT MSVC)
+        # In the shared build we link libzstd_static into the shared library
+        target_link_libraries(seal_shared PRIVATE libzstd_static)
+    endif()
+
     seal_install_target(seal_shared SEALTargets)
 endif()
 
 # In UNIX-like platforms combine manually seal and zlibstatic into a single archive; not pretty, but works
 if(SEAL_USE_ZLIB AND NOT MSVC)
     seal_combine_archives(seal zlibstatic)
+endif()
+
+# In UNIX-like platforms combine manually seal and libzstd_static into a single archive; not pretty, but works
+if(SEAL_USE_ZSTD AND NOT MSVC)
+    seal_combine_archives(seal libzstd_static)
 endif()
 
 #########################
