--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -368,9 +368,11 @@ if(SEAL_USE_ZLIB AND NOT MSVC)
         EXCLUDE_FROM_ALL)
     # Set the ZLIB include directory to be relative to this CMakeLists.txt's binary directory
     # for out-of-source builds.
-    set(SEAL_ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zlib/src)
+    set(SEAL_ZLIB_INCLUDE_DIRS
+        ${SEAL_THIRDPARTY_DIR}/zlib/src
+        ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/zlib/src)
     set_target_properties(zlibstatic PROPERTIES
-        INTERFACE_INCLUDE_DIRECTORIES ${SEAL_ZLIB_INCLUDE_DIR})
+        INTERFACE_INCLUDE_DIRECTORIES "${SEAL_ZLIB_INCLUDE_DIRS}")
 endif()
 
 # Google Test
@@ -722,6 +724,13 @@ install(
         ${SEAL_CONFIG_FILENAME}
         ${SEAL_CONFIG_VERSION_FILENAME}
     DESTINATION ${SEAL_CONFIG_INSTALL_DIR})
+
+# Install the pkg-config file
+install(
+    FILES
+        ${SEAL_PKGCONFIG_FILENAME}
+    DESTINATION
+        ${SEAL_PKGCONFIG_INSTALL_DIR})
 
 # We export SEALTargets from the build tree so it can be used by other projects
 # without requiring an install.
