--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -51,6 +51,7 @@
     <ClInclude Include="seal\util\common.h" />
     <ClInclude Include="seal\util\croots.h" />
     <ClInclude Include="seal\util\defines.h" />
+    <ClInclude Include="seal\util\dwthandler.h" />
     <ClInclude Include="seal\util\galois.h" />
     <ClInclude Include="seal\util\gcc.h" />
     <ClInclude Include="seal\util\globals.h" />
