--- a/cmake/SEALConfig.cmake.in
+++ b/cmake/SEALConfig.cmake.in
@@ -16,7 +16,8 @@
 #   SEAL_ENFORCE_HE_STD_SECURITY : Set to non-zero value if library is compiled to enforce at least
 #       a 128-bit security level based on HomomorphicEncryption.org security estimates
 #   SEAL_USE_MSGSL : Set to non-zero value if library is compiled with Microsoft GSL support
-#   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with zlib support
+#   SEAL_USE_ZLIB : Set to non-zero value if library is compiled with ZLIB support
+#   SEAL_USE_ZSTD : Set to non-zero value if library is compiled with Zstandard support
 
 @PACKAGE_INIT@
 
@@ -49,6 +50,7 @@ set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
 
 set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
 set(SEAL_USE_ZLIB @SEAL_USE_ZLIB@)
+set(SEAL_USE_ZSTD @SEAL_USE_ZSTD@)
 
 # Add the current directory to the module search path
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
