--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -166,6 +166,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <ZlibName Condition="'$(ZLIB_ROOT)'!=''">zlibstatic.lib</ZlibName>
+    <ZstdName Condition="'$(ZSTD_ROOT)'!=''">zstd_static.lib</ZstdName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -222,7 +223,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)\..\..\thirdparty\zstd\src\lib;$(ProjectDir)</AdditionalIncludeDirectories>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -244,8 +245,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib;zstd_static.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration);$(ProjectDir)\..\..\thirdparty\zstd\build\$(Platform)\lib\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -254,7 +255,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)\..\..\thirdparty\zstd\src\lib;$(ProjectDir)</AdditionalIncludeDirectories>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Neither</FavorSizeOrSpeed>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -275,8 +276,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstaticd.lib;zstd_static.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration);$(ProjectDir)\..\..\thirdparty\zstd\build\$(Platform)\lib\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -287,7 +288,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)\..\..\thirdparty\zstd\src\lib;$(ProjectDir)</AdditionalIncludeDirectories>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -310,8 +311,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib;zstd_static.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration);$(ProjectDir)\..\..\thirdparty\zstd\build\$(Platform)\lib\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
@@ -322,7 +323,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform);$(ProjectDir)\..\..\thirdparty\zlib\src;$(ProjectDir)\..\..\thirdparty\zstd\src\lib;$(ProjectDir)</AdditionalIncludeDirectories>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <InlineFunctionExpansion>Default</InlineFunctionExpansion>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -344,8 +345,8 @@
       <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
     <Lib>
-      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Bcrypt.lib;zlibstatic.lib;zstd_static.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(ProjectDir)\..\..\thirdparty\zlib\build\$(Platform)\$(Configuration);$(ProjectDir)\..\..\thirdparty\zstd\build\$(Platform)\lib\$(Configuration)</AdditionalLibraryDirectories>
       <AdditionalOptions>/IGNORE:4006 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
