--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,10 @@
 repos:
-    #- repo: https://github.com/pre-commit/pre-commit-hooks
-      #rev: v2.0.0
-      #hooks:
-        #- id: check-added-large-files
-        #- id: check-case-conflict
-        #- id: check-json
-        #- id: check-merge-conflict
-        #- id: check-symlinks
-        #- id: check-yaml
-        #- id: trailing-whitespace
-        #- id: end-of-file-fixer
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.0.0
+    hooks:
+      - id: check-added-large-files
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
   - repo: local
     hooks:
     - id: clang-format
