Moved some CMake scripts into modules. All option declarations are left in root CMakeLists.txt.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,31 @@
-# Based on templates from https://github.com/github/gitignore.
-
+#######################
 #### SEAL Specific ####
-bin/
-lib/
-build/
-*.build
-cmake/*
+#######################
+
+# Configuration
 !cmake/*.cmake.in
+!cmake/*.cmake
+cmake/SEALConfig.cmake
+cmake/SEALConfigVersion.cmake
+cmake/SEALTargets.cmake
 thirdparty/*/**
 !thirdparty/*/CMakeLists.txt
 native/src/seal/util/config.h
 native/src/gsl/
-dotnet/nuget/*.nuspec
 !dotnet/nuget/*.nuspec.in
+dotnet/nuget/*.nuspec
 dotnet/nuget/SEALNet.targets
+
+# Build
+bin/
+lib/
+build/
+*.build
 env
+
+########################################################################################
+#### The following are based on templates from https://github.com/github/gitignore. ####
+########################################################################################
 
 *.pc
 .config
